chore: add IMPLEMENTATION_SPEC.md to gitignore for v2.2 development

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ node_modules/
 # Build artifacts (pkg)
 MUDO.exe
 
+# Implementation specs (work in progress)
+IMPLEMENTATION_SPEC.md
+
 # Runtime generated folders
 downloads/
 logs/
